min date value changed

--- a/sport-events-app/src/app/event/add-event/add-event.component.html
+++ b/sport-events-app/src/app/event/add-event/add-event.component.html
@@ -35,8 +35,8 @@
             id="date"
             ngModel
             #inputDate="ngModel"
+            [min]="today"
             required
-            [min]="minDate"
           />
         </p>
   
