--- a/sport-events-app/src/app/event/all-events/all-events.component.css
+++ b/sport-events-app/src/app/event/all-events/all-events.component.css
@@ -89,3 +89,10 @@
     height: 100%;
     object-fit: cover;
 }
+
+.no-events {
+    flex: 0 0 100%;
+    text-align: center;
+    margin-top: 50px;
+    font-size: 20px;
+}
