method name changed

--- a/sport-events-app/src/app/event/edit-event/edit-event.component.html
+++ b/sport-events-app/src/app/event/edit-event/edit-event.component.html
@@ -1,6 +1,6 @@
 <div class="edit-event-container">
     <form class="edit-event-form" [formGroup]="form" (ngSubmit)="editEvent()">
-      <h2>Edit Event: {{message?.name}}</h2>
+      <h2>Edit Event: {{event?.name}}</h2>
   
       <section class="edit-event-sections">
         <p class="edit-event-label-input">
