when loading component the Loader Component shows

--- a/sport-events-app/src/app/app.component.html
+++ b/sport-events-app/src/app/app.component.html
@@ -3,7 +3,12 @@
     <app-header />
 
     <main>
+      @if (loading) {
+      <app-loader />
+      } @else {
       <router-outlet />
+      } 
+      
       @if (error) {
       <app-error-msg />
       }
